
* 0.5.0 *

* Add test for 0.91 and higher to handle incorrect syntax in sp_executesql.

* Returning empty result sets with a command batch that has multiple statements is now the default. Use :empty_sets => false to override.

* Do not raise a TinyTds::Error with our message handler unless the severity is greater than 10.


* 0.4.5 *

* Includes precompiled Windows binaries for FreeTDS 0.91rc2 & LibIconv. No precompiled OpenSSL yet for Windows to SQL Azure.

* Fixed symbolized unicode column names.

* Use same bigint ruby functions to return identity. Hopefully fixes #19.

* Release static libs for Windows.

* Change how :host/:port are implemented. Now sending "host:port" to :dataserver.


* 0.4.4 *

* New :host/:port connection options. Removes need for freetds.conf file.


* 0.4.3 *

* New Client#active? method to check for good connection. Always use this abstract method.

* Better SYBEWRIT "Write to SQL Server failed." error handling. New Client#dead? check.

* Azure tested using latest FreeTDS with submitted patch. https://gist.github.com/889190


* 0.4.2 *

* Iconv is a dep only when compiling locally. However, left in the ability to configure it for native gem installation but you must use --enable-iconv before using --with-iconv-dir=/some/dir

* Really fix what 0.4.1 was supposed to do, force SYBDBLIB compile.


* 0.4.1 *

* Undefine MSDBLIB in case others have explicitly compiled FreeTDS with "MS db-lib source compatibility: yes".


* 0.4.0 *

* Allow SYBEICONVI errors to pass thru so that bad data is converted to ? marks.

* Build native deps using MiniPortile [Luis Lavena]

* Allow Result#fields to be called before iterating over the results.

* Two new client helper methods, #sqlsent? and #canceled?. Possible to use these to determine current 
  state of the client and the need to use Result#cancel to stop processing active results. It is also 
  safe to call Result#cancel over and over again.

* Look for the syb headers only.


* 0.3.2 *
