@@ -2,8 +2,9 @@
 #ifndef TINYTDS_RESULT_H
 #define TINYTDS_RESULT_H
 
-// TODO: Is this needed?
-typedef tds_sysdep_int64_type DBBIGINT;  /* Missing in sybdb.h ?!?! */
+#ifndef DBSETLDBNAME
+  typedef tds_sysdep_int64_type DBBIGINT;  /* For FreeTDS 0.82 */
+#endif
 
 void init_tinytds_result();
 VALUE rb_tinytds_new_result_obj(DBPROCESS *c);
