@@ -2,12 +2,15 @@ require "mini_portile"
 require "rake/extensioncompiler"
 
 namespace :ports do
-
+  
+  # If your using 0.82, you may have to make a conf file to get it to work. For example:
+  # $ export FREETDSCONF='/opt/local/etc/freetds/freetds.conf'
+  
   ICONV_VERSION = "1.13.1"
   FREETDS_VERSION = ENV['TINYTDS_FREETDS_082'] ? "0.82" : "0.91"
   FREETDS_VERSION_INFO = {
-    "0.82" => {:files => "http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/freetds-stable.tgz"},
-    "0.91" => {:files => "http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/release_candidates/freetds-0.91RC2.tar.gz"} }
+    "0.82" => {:files => "http://ibiblio.org/pub/Linux/ALPHA/freetds/old/0.82/freetds-0.82.tar.gz"},
+    "0.91" => {:files => "http://ibiblio.org/pub/Linux/ALPHA/freetds/stable/freetds-0.91.tar.gz"} }
 
   ORIGINAL_HOST = RbConfig::CONFIG["arch"]
 
